feat: add Success, Warning, Destructive and Info colors

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -14,9 +14,20 @@
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.918 0.003 264.5); /* #E4E4E7 */
-  --input: oklch(0.918 0.003 264.5); /* #E4E4E7 */
+  --destructive: oklch(0.971 0.013 17.38);
+  --destructive-foreground: oklch(0.577 0.245 27.325);
+  --destructive-border: oklch(0.885 0.062 18.334);
+  --warning: oklch(0.973 0.071 103.193);
+  --warning-foreground: oklch(0.476 0.114 61.907);
+  --warning-border: oklch(0.945 0.129 101.54);
+  --success: oklch(0.962 0.044 156.743);
+  --success-foreground: oklch(0.448 0.119 151.328);
+  --success-border: oklch(0.925 0.084 155.995);
+  --info: oklch(0.932 0.032 255.585);
+  --info-foreground: oklch(0.424 0.199 265.638);
+  --info-border: oklch(0.882 0.059 254.128);
+  --border: oklch(0.918 0.003 264.5);
+  --input: oklch(0.918 0.003 264.5);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
