feat: ui based css vars

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,45 +1,45 @@
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.971 0.013 17.38);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --destructive-border: oklch(0.885 0.062 18.334);
-  --warning: oklch(0.973 0.071 103.193);
-  --warning-foreground: oklch(0.476 0.114 61.907);
-  --warning-border: oklch(0.945 0.129 101.54);
-  --success: oklch(0.962 0.044 156.743);
-  --success-foreground: oklch(0.448 0.119 151.328);
-  --success-border: oklch(0.925 0.084 155.995);
-  --info: oklch(0.932 0.032 255.585);
-  --info-foreground: oklch(0.424 0.199 265.638);
-  --info-border: oklch(0.882 0.059 254.128);
-  --border: oklch(0.918 0.003 264.5);
-  --input: oklch(0.918 0.003 264.5);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --radius-ui: 0.625rem;
+  --background-ui: oklch(1 0 0);
+  --foreground-ui: oklch(0.145 0 0);
+  --card-ui: oklch(1 0 0);
+  --card-foreground-ui: oklch(0.145 0 0);
+  --popover-ui: oklch(1 0 0);
+  --popover-foreground-ui: oklch(0.145 0 0);
+  --primary-ui: oklch(0.205 0 0);
+  --primary-foreground-ui: oklch(0.985 0 0);
+  --secondary-ui: oklch(0.97 0 0);
+  --secondary-foreground-ui: oklch(0.205 0 0);
+  --muted-ui: oklch(0.97 0 0);
+  --muted-foreground-ui: oklch(0.556 0 0);
+  --accent-ui: oklch(0.97 0 0);
+  --accent-foreground-ui: oklch(0.205 0 0);
+  --destructive-ui: oklch(0.971 0.013 17.38);
+  --destructive-foreground-ui: oklch(0.577 0.245 27.325);
+  --destructive-border-ui: oklch(0.885 0.062 18.334);
+  --warning-ui: oklch(0.973 0.071 103.193);
+  --warning-foreground-ui: oklch(0.476 0.114 61.907);
+  --warning-border-ui: oklch(0.945 0.129 101.54);
+  --success-ui: oklch(0.962 0.044 156.743);
+  --success-foreground-ui: oklch(0.448 0.119 151.328);
+  --success-border-ui: oklch(0.925 0.084 155.995);
+  --info-ui: oklch(0.932 0.032 255.585);
+  --info-foreground-ui: oklch(0.424 0.199 265.638);
+  --info-border-ui: oklch(0.882 0.059 254.128);
+  --border-ui: oklch(0.918 0.003 264.5);
+  --input-ui: oklch(0.918 0.003 264.5);
+  --ring-ui: oklch(0.708 0 0);
+  --chart-1-ui: oklch(0.646 0.222 41.116);
+  --chart-2-ui: oklch(0.6 0.118 184.704);
+  --chart-3-ui: oklch(0.398 0.07 227.392);
+  --chart-4-ui: oklch(0.828 0.189 84.429);
+  --chart-5-ui: oklch(0.769 0.188 70.08);
+  --sidebar-ui: oklch(0.985 0 0);
+  --sidebar-foreground-ui: oklch(0.145 0 0);
+  --sidebar-primary-ui: oklch(0.205 0 0);
+  --sidebar-primary-foreground-ui: oklch(0.985 0 0);
+  --sidebar-accent-ui: oklch(0.97 0 0);
+  --sidebar-accent-foreground-ui: oklch(0.205 0 0);
+  --sidebar-border-ui: oklch(0.922 0 0);
+  --sidebar-ring-ui: oklch(0.708 0 0);
 }
